Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjIntegerRetText.quorum
class Main
    action Main
        Yoda<Text, Text, integer> yoda
        integer y = yoda:useForce("green", "green")
        output "passed"
     end
end
