Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, integer> yoda
        boolean y = yoda("green", "green", true)
     end
end
